# scst-rs

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
scst/: Cargo.toml  README.md
scst/benches/: benchmark.rs
scst/src/: config.rs  copy_manager.rs  device.rs  error.rs  handler.rs  lib.rs  scst_tgt.rs  stat.rs  target.rs
scstcli/: Cargo.toml
scstcli/src/: main.rs
src/: lib.rs  scst_tgt.rs
