[package]
name = "scst"
version = "0.1.0"
authors = ["Lack <xingyys@gmail.com>"]
categories = ["linux", "iscsi"]
description = "iscsi-scst user interface implemention by rust"
documentation = "https://docs.rs/scst"
edition = "2018"
keywords = ["scst", "iscsi"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vine-io/scst.rs"
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.11.0"
serde = "1.0.210"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false